--- a/package.json
+++ b/package.json
@@ -11,8 +11,12 @@
   "author": "Andy",
   "license": "ISC",
   "dependencies": {
-    "react": "^15.4.2",
-    "react-dom": "^15.4.2",
+    "babel-core": "^6.24.1",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "react": "^15.5.3",
+    "react-dom": "^15.5.3",
     "react-router-dom": "^4.0.0"
   },
   "devDependencies": {
