--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "prop-types": "^15.5.6",
     "react": "^15.5.3",
     "react-dom": "^15.5.3",
     "react-router-dom": "^4.0.0"
